[package]
name = "string_len"
version = "0.1.1"
authors = ["Uzair Hussain"]
edition = "2018"
description = "library that calculate string length"
license = "MIT" 
repository = "https://github.com/Uzairhussain98/rust_library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
